--- a/style.css
+++ b/style.css
@@ -5,43 +5,34 @@
     The fonts must be white, unless specified otherwise. 
 */
 
-* {margin: 0;}
-
-body {
-    background: url('./img/background_1920.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 98vh;
-    z-index: -2;
+* {
+    margin: 0;
+    box-sizing: border-box;
 }
+
+/* body {} */
 
 .whole-page {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-color: rgba(60, 0, 60,0.5);
+    width: 100vw;
+    height: 100vh;
+    box-shadow: 50px 50px  rgba(60, 0, 60,0.5);
 }
 
-img {
-    border: 3px solid rgba(60, 0, 60,0.5); 
-    max-width: 80%;
-}
 
 .main-page{
+    position: relative;
     background-color: rgba(71, 44, 122, 0.8);
     display: flex;
     flex-flow: column nowrap;
     justify-content: flex-start;
 
     width: 800px;
-    height: 100%;
-    margin: 0 20px;
-    padding: 0px 50px;
-    padding-top: 50px;
+    min-height: 100vh;
+    margin: 0px 20px;
+    padding: 20px 50px;
     gap: 10px;
 
     border-left: 3px solid rgba(60, 0, 60,0.5);
@@ -50,4 +41,10 @@ img {
 
 .main-page * {
     color: azure;
+}
+
+.main-page>img {
+    border: 3px solid rgba(60, 0, 60,0.5); 
+    max-width: 80%;
+    max-height: 600px;
 }
